# opengl-template

./: CMakeLists.txt  main.cpp
assets/shaders/: triangle.frag  triangle.vert
example/: example_layer.cpp  example_layer.h  main.cpp
include/vgl/: shader.h
src/: application.cpp  application.h  camera.cpp  camera.h  example_layer.cpp  example_layer.h  fps_counter.cpp  gui_layer.cpp  gui_layer.h  layer.cpp  layer.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/core/: application.cpp  application.h  camera.cpp  camera.h  gui_layer.h  layer.cpp  texture.cpp  texture.h  window.cpp  window.h
src/util/: fps_counter.cpp  fps_counter.h
